--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,8 @@
-
 version: 2
 jobs:
-  build:
-    macos:
-        - image: circleci/TestCucumberRunner.java
+    build:
+      macos:
+        xcode: "12.5.1"
     steps:
       - checkout
       - run:
